[gd_scene load_steps=3 format=3 uid="uid://b10h4cuhgc3sd"]

[ext_resource type="Script" uid="uid://b2qpvsml7jeyn" path="res://Components/PauseComponent/pause_component.gd" id="1_8ftj5"]
[ext_resource type="PackedScene" uid="uid://bj10xu5qc40iv" path="res://Components/PauseComponent/PauseComponentsButtons.tscn" id="2_olaim"]

[node name="PauseComponent" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ftj5")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Pause"

[node name="Continuar" parent="CenterContainer/VBoxContainer" instance=ExtResource("2_olaim")]
layout_mode = 2
label_text = "Continuar"

[node name="Ajustes" parent="CenterContainer/VBoxContainer" instance=ExtResource("2_olaim")]
layout_mode = 2
label_text = "Ajustes"

[node name="Sair" parent="CenterContainer/VBoxContainer" instance=ExtResource("2_olaim")]
layout_mode = 2
label_text = "Sair"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Ajustes" to="." method="_on_ajustes_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
